kubernetes/apps/mellovy/nextcloud/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - nextcloud.mellovy.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud-aio-apache
          port: 11000
